--- a/bokeh/server/templates/embed_test.html
+++ b/bokeh/server/templates/embed_test.html
@@ -2,13 +2,22 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link href="{{ url_for('static', filename='vendor/bokehjs/css/bokeh.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='vendor/bokehjs/css/continuum.css') }}" rel="stylesheet">
+
+
+    <link href="{{ url_for('static', filename='vendor/bokehjs/vendor/bootstrap/css/bootstrap.css') }}" rel="stylesheet">    
   
 </head>
 <body>
   <p>content</p>
+
 <script src="http://localhost:5006/bokeh/embed.js" bokeh_plottype="serverconn"
 bokeh_docid="f66ebc17-dd93-4497-853d-d57063372bce" bokeh_ws_conn_string="ws://localhost:5006/bokeh/sub"
 bokeh_docapikey="0d1efb97-c52c-4054-bbf0-9c8c22a0eccb" bokeh_root_url="http://localhost:5006"
-bokeh_modelid="b9c1d5dc-c617-41bc-9df7-bed21020035e" bokeh_modeltype="Plot" async="true"></script>        
+bokeh_modelid="5e40aeba-bea7-4a2e-9bbf-97c5feda9c89" bokeh_modeltype="Plot" async="true"></script>        
+        
+
+
 </body>
 </html>
